--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -5,3 +5,5 @@ tree:
     entry: 30e4d007-b552-47c2-94ac-48cb9cc5dd88
   -
     entry: a6d67b75-76b7-4a23-89a0-0185e4f90989
+  -
+    entry: 9c5b6068-cb2d-40f1-a30c-0c418c93b210
