--- a/content/trees/navigation/documentation.yaml
+++ b/content/trees/navigation/documentation.yaml
@@ -1,7 +1,28 @@
 tree:
   -
-    id: 7b59986c-1d3a-4e4f-be10-0fd88ffe8991
-    entry: 1e96f1a9-d3a2-45f7-8007-de1bf6173957
+    id: 18052353-e5d8-43f6-8ad0-c6a90eb00031
+    entry: 3ece91d4-a493-46b4-92bb-fa8a784aa1f0
   -
-    id: 0e29d3c8-ba76-4b91-9cdf-4a0f16b63011
-    entry: 6b9d443b-81cd-4161-9fc7-df698dbfcab6
+    id: 70bb4c3c-6697-4b40-8ba2-86cf2581b0bf
+    title: User
+    children:
+      -
+        id: ee656a26-8adc-4248-a445-d545ca5ce58d
+        entry: 21cc5ee6-baf0-4488-9ede-18bc03973b45
+  -
+    id: 29767b04-5b6f-40e0-9f2f-869404e65cf4
+    title: Hosting
+    children:
+      -
+        id: 7b59986c-1d3a-4e4f-be10-0fd88ffe8991
+        entry: 1e96f1a9-d3a2-45f7-8007-de1bf6173957
+      -
+        id: 0e29d3c8-ba76-4b91-9cdf-4a0f16b63011
+        entry: 6b9d443b-81cd-4161-9fc7-df698dbfcab6
+  -
+    id: 966a9f32-e3ca-4daa-9174-dd0dd4dbba91
+    title: Development
+    children:
+      -
+        id: 6816957f-fbf2-445d-9317-f5b537b62196
+        entry: 596412de-0175-4c45-b07d-703b66605951
