--- a/content/collections/documentation.yaml
+++ b/content/collections/documentation.yaml
@@ -1,5 +1,5 @@
 title: Documentation
-template: default
+template: documentation/show
 layout: layout
 revisions: false
 route: '/documentation/{slug}'
