--- a/content/trees/navigation/documentation.yaml
+++ b/content/trees/navigation/documentation.yaml
@@ -3,6 +3,9 @@ tree:
     id: 18052353-e5d8-43f6-8ad0-c6a90eb00031
     entry: 3ece91d4-a493-46b4-92bb-fa8a784aa1f0
   -
+    id: e170713a-7425-4935-a4b0-d7837f8e9654
+    entry: 1391eb4f-4839-44b0-ad64-b4ebd32985cd
+  -
     id: 70bb4c3c-6697-4b40-8ba2-86cf2581b0bf
     title: User
     children:
