Add GPT spell corrector

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,6 @@ STATAMIC_REVISIONS_ENABLED=false
 STATAMIC_GRAPHQL_ENABLED=false
 STATAMIC_API_ENABLED=false
 STATAMIC_GIT_ENABLED=false
+
+OPENAI_API_KEY=
+OPENAI_ORGANIZATION=
